# BM_FW

./: .gitignore  .gitmodules  DataExtractor.code-workspace  README.md
DataExtractor/: CMakeLists.txt  config.yml
DataExtractor/InfluxDb/: docker-compose.yml
DataExtractor/cmake/: libXlsx.cmake  libYaml.cmake
DataExtractor/kubernetes/: 00_namespace.yaml  01_influxdb.yaml  02_chronograf.yaml  03_grafana.yaml  04_job.yaml  README.md
DataExtractor/src/: InfluxMain.c  common.c  common.h  config.c  config.h  main.c  memory.c  memory.h  power.c  power.h  process.c  process.h  report.c  report.h
DataExtractor/src/influx/: influxdb.c  influxdb.h  processInflux.c  processInflux.h
DataExtractor/src/xls/: memoryXls.c  memoryXls.h  powerXls.c  powerXls.h  proccessXls.c  proccessXls.h
coordinator/: .gitignore  CMakeLists.txt  Makefile  bmCoordiantor.workspace
coordinator/.codelite/: bmCoordiantor.session  bmCoordiantor.tags  cscope_file.list  refactoring.db
coordinator/bmCoordinator/: .gitignore  Makefile  bmCoordinator.mk  bmCoordinator.project  bmCoordinator.txt  config.c  config.h  config.yml  datalogger.c  datalogger.h  main.c  proc_common.c  proc_common.h  remote_proc.c  remote_proc.h
coordinator/bmCoordinator/Debug/: bmCoordinator  datalogger.c.o.d  main.c.o.d  proc_common.c.o.d  remote_proc.c.o.d
coordinator/rp_datalogger/: dataloger.c  rp_datalogger.mk  rp_datalogger.project  rp_datalogger.txt
coordinator/rp_datalogger/Debug/: dataloger.c.o.d  rp_datalogger
coordinator/rp_datalogger_dummy/: .gitignore  Makefile  dataloger.c
matlab/: Anex1.m  Anex2.m  Anex3.m  Anex4.m  Calibration.m  CalibrationNew.m  GetData.m  Kafka.m  Mqtt.m  PlotBarGraphics.m  PlotData.m  ReadData.m  ReadFileData.m  Rest.m  Soap.m
matlab/fbmf/: fbf_FillPowerEstimation.m  fbf_GetData.m  fbf_GetPrintNamesFormat.m  fbf_PlotFieldBars.m  fbf_PlotMemData.m  fbf_PrintData.m  fbf_PrintFieldTable.m  fbf_PrintTextTable.m  fbf_ReadMemData.m  fbf_ReadPowerData.m  fbf_TabulateData.m
recorded_data/BeagleBone/: C_KAFKA.xlsx  C_MQTT.xlsx  C_REST.xlsx  C_SOAP.xlsx  c_info.txt  java_info.txt  node_info.txt  python_info.txt
recorded_data/BeagleBone/C/Kafka/: C_KAFKA_1.txt  C_KAFKA_2.txt  C_KAFKA_3.txt  C_KAFKA_4.txt  C_KAFKA_5.txt  C_KAFKA_MEM_1.txt  C_KAFKA_MEM_2.txt  C_KAFKA_MEM_3.txt  C_KAFKA_MEM_4.txt  C_KAFKA_MEM_5.txt
recorded_data/BeagleBone/C/Mqtt/: C_MQTT_1.txt  C_MQTT_2.txt  C_MQTT_3.txt  C_MQTT_4.txt  C_MQTT_5.txt  C_MQTT_MEM_1.txt  C_MQTT_MEM_2.txt  C_MQTT_MEM_3.txt  C_MQTT_MEM_4.txt  C_MQTT_MEM_5.txt
recorded_data/BeagleBone/C/Rest/: C_REST_1.txt  C_REST_2.txt  C_REST_3.txt  C_REST_4.txt  C_REST_5.txt  C_REST_MEM_1.txt  C_REST_MEM_2.txt  C_REST_MEM_3.txt  C_REST_MEM_4.txt  C_REST_MEM_5.txt
recorded_data/BeagleBone/C/Soap/: C_SOAP_1.txt  C_SOAP_2.txt  C_SOAP_3.txt  C_SOAP_4.txt  C_SOAP_5.txt  C_SOAP_MEM_1.txt  C_SOAP_MEM_2.txt  C_SOAP_MEM_3.txt  C_SOAP_MEM_4.txt  C_SOAP_MEM_5.txt
recorded_data/BeagleBone/Java/Kafka/: JAVA_KAFKA_1.txt  JAVA_KAFKA_2.txt  JAVA_KAFKA_3.txt  JAVA_KAFKA_4.txt  JAVA_KAFKA_5.txt  JAVA_KAFKA_MEM_1.txt  JAVA_KAFKA_MEM_2.txt  JAVA_KAFKA_MEM_3.txt  JAVA_KAFKA_MEM_4.txt  JAVA_KAFKA_MEM_5.txt
recorded_data/BeagleBone/Java/Mqtt/: JAVA_MQTT_1.txt  JAVA_MQTT_2.txt  JAVA_MQTT_3.txt  JAVA_MQTT_4.txt  JAVA_MQTT_5.txt  JAVA_MQTT_MEM_1.txt  JAVA_MQTT_MEM_2.txt  JAVA_MQTT_MEM_3.txt  JAVA_MQTT_MEM_4.txt  JAVA_MQTT_MEM_5.txt
recorded_data/BeagleBone/Java/Rest/: JAVA_REST_1.txt  JAVA_REST_2.txt  JAVA_REST_3.txt  JAVA_REST_4.txt  JAVA_REST_5.txt  JAVA_REST_MEM_1.txt  JAVA_REST_MEM_2.txt  JAVA_REST_MEM_3.txt  JAVA_REST_MEM_5.txt
recorded_data/Calibration/: calib-rv.txt  calibration_000  calibration_330  calibration_330_rp  calibration_499
recorded_data/Raspberry/: C_KAFKA.xlsx  C_MQTT.xlsx  C_REST.xlsx  C_SOAP.xlsx  JAVA_KAFKA.xlsx  JAVA_MQTT.xlsx  JAVA_REST.xlsx  c_info.txt  java_info.txt  node_info.txt  python_info.txt
recorded_data_new/: coordinator.yml  dataExtractor.yml
recorded_data_new/RaspberryPi/: .gitignore
recorded_data_new/calibration/: In1_2_465_029.txt  In1_460.txt  In2_459.txt  In3_329.txt  In4_331.txt  In5_000.txt
rp_datalogger/: dataloger.c
(+697 files in other folders)
